2006-09-05  Alex Graveley  <alex@beatniksoftware.com>

	* Tomboy/Makefile.am: Remove all references to tintin.png.
	* data/images/Makefile.am: Ditto.
	* tomboy.spec.in: Ditto.

2006-09-05  Alex Graveley  <alex@beatniksoftware.com>

	* configure.in: Update version to 0.4.0.
	* NEWS: Ditto.

2006-09-02  Alex Graveley  <alex@beatniksoftware.com>

	* configure.in: Set $ENABLE_GTKSPELL if gtkspell-2.0 is installed.
	This makes gtkspell optional as required for GNOME release.

	* Tomboy/Makefile.am: Pass -define:ENABLE_DBUS if it's enabled.

	If gtkspell isn't enabled...
	* Tomboy/Watchers.cs: Conditionally include NoteSpellChecker.
	* Tomboy/Preferences.cs: Don't show spell check enable checkbox,
	and don't pack the font button to fill the extra space.
	* Tomboy/PluginManager.cs: Don't create NoteSpellChecker objects.

2006-09-04  Alex Graveley  <alex@beatniksoftware.com>

	* Tomboy/dbus-sharp/Connection.cs: Use dbus_connection_close
	instead of disconnect which no longer exists in DBUS 0.90.

2006-09-03  Priit Laes <plaes@cvs.gnome.org>

	* configure.in: Added 'et' to ALL_LINGUAS

2006-09-02  Brent Smith  <gnome@nextreality.net>

	* help/C/figures/tomboy-new-note.png:
	* help/C/figures/tomboy-preferences-editing.png:
	* help/C/figures/tomboy-preferences-hotkeys.png:
	* help/C/tomboy.xml: Finished the documentation
	* help/ChangeLog:

2006-09-01  Brent Smith  <gnome@nextreality.net>

	* help/C/figures/tomboy-new-note.png:
	* help/C/figures/tomboy-panel.png:
	* help/C/figures/tomboy-preferences-editing.png:
	* help/C/figures/tomboy-preferences-hotkeys.png:
	* help/C/figures/tomboy-tools.png:
	* help/C/tomboy.xml:
	* help/ChangeLog:
	unfinished version of Tomboy manual; committed so Alex can branch.

2006-08-31  Danilo Segan  <danilo@gnome.org>

	* configure.in: Added Serbian (sr, sr@Latn) to ALL_LINGUAS.

2006-08-27  Sandy Armstrong <sanfordarmstrong@gmail.com>

	* Tomboy/Plugins/StickyNoteImport.cs: Added support for automatic