@@ -1,5 +1,5 @@
 AC_INIT(Tomboy/Tomboy.cs)
-AM_INIT_AUTOMAKE(tomboy, 0.4.0)
+AM_INIT_AUTOMAKE(tomboy, 0.4.1)
 AM_MAINTAINER_MODE
 
 GNOME_COMMON_INIT
